Fix cards not retaining their order within a category
Closes #5

--- a/card-sort.html
+++ b/card-sort.html
@@ -364,8 +364,11 @@
                 },
               });
               categoryGrid.on('dragEnd', function handleDragEnd(data) {
-                debouncedUpdateData();
                 categoriesGrid.refreshItems().layout();
+              });
+              categoryGrid.on('dragReleaseEnd', function handleDragReleaseEnd(data) {
+                categoryGrid.synchronize();
+                debouncedUpdateData();
               });
               cardGrids.push(categoryGrid);
               const cardTexts = data[name] || [];
